# Generated by Django 5.2.12 on 2026-03-26 16:03

import django.db.models.deletion
import django.utils.timezone
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('applications', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='IntegrationEvent',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('source', models.CharField(choices=[('cardcom', 'Cardcom'), ('morning', 'Morning')], db_index=True, max_length=20)),
                ('event_type', models.CharField(max_length=100)),
                ('dedupe_key', models.CharField(max_length=255)),
                ('payload_json', models.JSONField(default=dict)),
                ('processing_status', models.CharField(choices=[('pending', 'Pending'), ('processing', 'Processing'), ('done', 'Done'), ('failed', 'Failed')], db_index=True, default='pending', max_length=20)),
                ('error_message', models.TextField(blank=True)),
                ('received_at', models.DateTimeField(default=django.utils.timezone.now, editable=False)),
                ('processed_at', models.DateTimeField(blank=True, null=True)),
            ],
            options={
                'ordering': ['-received_at'],
                'constraints': [models.UniqueConstraint(fields=('source', 'dedupe_key'), name='unique_source_dedupe_key')],
            },
        ),
        migrations.CreateModel(
            name='PaymentAttempt',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('public_id', models.UUIDField(default=uuid.uuid4, editable=False, unique=True)),
                ('amount', models.DecimalField(decimal_places=2, max_digits=8)),
                ('currency', models.CharField(default='ILS', max_length=3)),
                ('vendor', models.CharField(default='cardcom', max_length=20)),
                ('vendor_low_profile_id', models.CharField(blank=True, max_length=120)),
                ('payment_url', models.URLField(blank=True, max_length=500)),
                ('status', models.CharField(choices=[('created', 'Created'), ('sent', 'Sent'), ('paid', 'Paid'), ('failed', 'Failed'), ('expired', 'Expired'), ('invalidated', 'Invalidated')], db_index=True, default='created', max_length=20)),
                ('raw_create_response_json', models.JSONField(blank=True, default=dict)),
                ('raw_getlpresult_json', models.JSONField(blank=True, default=dict)),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now, editable=False)),
                ('sent_at', models.DateTimeField(blank=True, null=True)),
                ('paid_at', models.DateTimeField(blank=True, null=True)),
                ('invalidated_at', models.DateTimeField(blank=True, null=True)),
                ('application', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='payment_attempts', to='applications.application')),
            ],
            options={
                'ordering': ['-created_at'],
                'constraints': [models.UniqueConstraint(condition=models.Q(('status__in', ['created', 'sent'])), fields=('application',), name='one_active_attempt_per_application')],
            },
        ),
    ]
